WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285565
Skip some safe buffers warnings detected by recent clang versions
https://bugs.webkit.org/show_bug.cgi?id=285565
Summary
Skip some safe buffers warnings detected by recent clang versions
Geoffrey Garen
Reported
2025-01-07 17:08:38 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-07 17:08:50 PST
<
rdar://problem/142513469
>
Geoffrey Garen
Comment 2
2025-01-07 17:09:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38688
EWS
Comment 3
2025-01-07 18:55:41 PST
Committed
288577@main
(bd6d7fbb5a69): <
https://commits.webkit.org/288577@main
> Reviewed commits have been landed. Closing PR #38688 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug