Skip some safe buffers warnings detected by recent clang versions https://bugs.webkit.org/show_bug.cgi?id=285565 rdar://142513469

Reviewed by David Kilzer.

* Source/WTF/wtf/text/CodePointIterator.h:
* Source/WebKit/NetworkProcess/cache/NetworkCacheKey.h:
(WTF::NetworkCacheKeyHash::hash):

Canonical link: https://commits.webkit.org/288577@main